mobile menu changes

--- a/css/style.css
+++ b/css/style.css
@@ -2238,7 +2238,7 @@ li.level0>a:hover>span>.pin-bottom:before,
     padding: 2px 0 0;
     background: #fff;
     /*width: 99.8%;*/
-    border-bottom: 5px solid #2d5290;
+    border-bottom: 5px solid #323232;
 }
 
 #mobile-menu ul.navmenu .menutop {
