Fix: Design issue

--- a/css/style.css
+++ b/css/style.css
@@ -138,13 +138,12 @@ legend {
     display: none;
 }
 
+
 /*p {
     text-align: justify;
     line-height: 26px;
     letter-spacing: 1px;
 }*/
-
-
 
 
 /*------------- 2. Layout ------------ */
@@ -155,6 +154,7 @@ legend {
     background: #fff;
     width: 100%;
 }
+
 
 
 
@@ -176,6 +176,7 @@ legend {
 
 
 
+
 /* 1 Column Layout */
 
 .col1-layout .header-background-default {
@@ -192,6 +193,7 @@ legend {
 
 
 
+
 /* 2 Columns Layout */
 
 .col2-left-layout .col-main {}
@@ -201,6 +203,7 @@ legend {
 .col2-right-layout ol.opc .col-md-4 {
     margin-right: 15px;
 }
+
 
 
 
@@ -224,6 +227,7 @@ legend {
     min-height: 400px;
     padding: 20px 0 0px;
 }
+
 
 
 
@@ -258,6 +262,7 @@ legend {
 
 
 
+
 /*.header .logo a img {
     cursor: pointer
 }*/
@@ -271,6 +276,7 @@ legend {
     color: #333;
     font-family: "Lato", sans-serif;
 }
+
 
 
 
@@ -343,6 +349,7 @@ ul.currencies_list li a:hover {
     color: #fff;
     text-decoration: none;
 }
+
 
 
 
@@ -473,6 +480,7 @@ a.block-currency:focus {
 
 
 
+
 /* Toplink */
 
 .toplinks {
@@ -564,12 +572,14 @@ a.block-currency:focus {
 
 
 
+
 /* search */
 
 .search-box {
     margin: 15px 0;
     /*right: 0px;*/
 }
+
 
 
 
@@ -667,6 +677,7 @@ a.block-currency:focus {
     color: #333 !important;
     background: none;
 }
+
 
 
 
@@ -1020,6 +1031,7 @@ a.glyphicon-pencil:hover {
 
 
 
+
 /* Store Messages */
 
 #store-messages {
@@ -1114,6 +1126,7 @@ a.glyphicon-pencil:hover {
 
 
 
+
 /*----------- 4. Navigation -------------*/
 
 nav {
@@ -1173,6 +1186,7 @@ nav {
 
 
 
+
 /* Drop-down menu (horizontal)*/
 
 .nav-inner {
@@ -1192,6 +1206,7 @@ nav {
 
 
 
+
 /* All levels */
 
 #nav li {
@@ -1206,6 +1221,7 @@ nav {
 #nav li a span {}
 
 #nav li ul a span {}
+
 
 
 
@@ -1239,6 +1255,7 @@ nav {
 
 
 
+
 /* Drop-down boxes:
     wide:    2nd-level category drop-down box + custom block drop-down box
     classic: custom block drop-down box */
@@ -1248,6 +1265,7 @@ nav {
     left: -10000px;
     background-color: #fff;
 }
+
 
 
 
@@ -1274,6 +1292,7 @@ nav {
 
 
 
+
 /* Home link */
 
 
@@ -1282,6 +1301,7 @@ nav {
 #nav a.level-top.feature {
     margin: 0;
 }
+
 
 
 
@@ -1306,6 +1326,7 @@ nav {
 
 
 
+
 /* Single icon as home link */
 
 #nav #homelink-icon {
@@ -1324,6 +1345,7 @@ nav {
 
 
 
+
 /* Custom menu item */
 
 #nav .nav-custom-link>a {
@@ -1334,11 +1356,13 @@ nav {
 
 
 
+
 /* Remove 'relative' positioning from custom 'li' (custom block have to be positioned relative to #nav) */
 
 #nav .nav-custom-link {
     position: static;
 }
+
 
 
 
@@ -1368,6 +1392,7 @@ nav {
 
 
 
+
 /* Caret */
 
 #nav a.level-top .caret {
@@ -1387,6 +1412,7 @@ nav {
 
 
 
+
 /* Number of products in category */
 
 
@@ -1396,6 +1422,7 @@ nav {
     margin-left: 3px;
     color: #aaa;
 }
+
 
 
 
@@ -1416,6 +1443,7 @@ nav {
 
 
 
+
 /* Other */
 
 .nav .itemslider {
@@ -1426,6 +1454,7 @@ nav {
 .nav .itemslider .item {
     padding-bottom: 0;
 }
+
 
 
 
@@ -1445,6 +1474,7 @@ li.level0>a>span>.cat-label {
     font-size: 12px;
     line-height: 22px;
 }
+
 
 
 
@@ -1479,6 +1509,7 @@ li.level0>a:hover>span>.pin-bottom:before {
 
 
 
+
 /* 2nd level */
 
 li.level1>a>span>.cat-label {
@@ -1492,6 +1523,7 @@ li.level1>a>span>.cat-label {
 
 
 
+
 /* 3rd level */
 
 li.level2>a>span>.cat-label {
@@ -1499,6 +1531,7 @@ li.level2>a>span>.cat-label {
     padding: 0 4px;
     margin-left: 2px;
 }
+
 
 
 
@@ -1517,11 +1550,13 @@ ul.vertnav li>a>span>.cat-label {
 
 
 
+
 /* Hide pin */
 
 ul.vertnav li>a>span>.pin-bottom:before {
     display: none;
 }
+
 
 
 
@@ -1538,6 +1573,7 @@ ul.vertnav-top li>a>span>.cat-label {
     font-size: 12px;
     line-height: 18px;
 }
+
 
 
 
@@ -1579,11 +1615,13 @@ ul.vertnav-top li>a>span>.cat-label {
 
 
 
+
 /* Section line (separator) is lighter than other lines */
 
 .nav-block .section-line {
     border-color: #eee;
 }
+
 
 
 
@@ -1681,12 +1719,14 @@ li.level0>a:hover>span>.pin-bottom:before,
 
 
 
+
 /* 1st level only */
 
 #nav>li:hover>a {
     position: relative;
     z-index: 1;
 }
+
 
 
 
@@ -1734,6 +1774,7 @@ li.level0>a:hover>span>.pin-bottom:before,
 
 
 
+
 /* 2nd level+ */
 
 #nav ul li {
@@ -1746,6 +1787,7 @@ li.level0>a:hover>span>.pin-bottom:before,
 #nav ul li a {
     float: none;
 }
+
 
 
 
@@ -1788,6 +1830,7 @@ li.level0>a:hover>span>.pin-bottom:before,
 
 
 
+
 /* 4th level */
 
 #nav ul.level2 {
@@ -1814,12 +1857,14 @@ li.level0>a:hover>span>.pin-bottom:before,
 
 
 
+
 /* 4rd level+ */
 
 #nav ul ul ul li {
     background: none;
     padding-left: 0;
 }
+
 
 
 
@@ -1839,6 +1884,7 @@ li.level0>a:hover>span>.pin-bottom:before,
 .nav-links>li.label {
     padding-right: 0.5833em;
 }
+
 
 
 
@@ -2191,6 +2237,7 @@ li.level0>a:hover>span>.pin-bottom:before,
 
 
 
+
 /* Mob Menu */
 
 #mobile-menu {
@@ -2357,6 +2404,7 @@ ul.topnav em:hover {
 
 
 
+
 /*----------- 5. Header Service ------------ */
 
 .header-service {
@@ -2417,6 +2465,7 @@ ul.topnav em:hover {
 
 
 
+
 /*-----------6. Offer Banner------- */
 
 .offer-banner-section {
@@ -2464,6 +2513,7 @@ ul.topnav em:hover {
 
 
 
+
 /*-------- 7. recommend products page ---------- */
 
 .new_title.center {
@@ -2490,6 +2540,7 @@ ul.topnav em:hover {
     text-shadow: 0 1px 0 #fff;
     text-transform: uppercase;
 }
+
 
 
 
@@ -2697,6 +2748,7 @@ ul.topnav em:hover {
 
 
 
+
 /*------------ 9. Product View ---------- */
 
 .product-view #product-img-box .new-box,
@@ -2776,6 +2828,7 @@ ul.topnav em:hover {
     z-index: 100;
     font-weight: normal;
 }
+
 
 
 
@@ -3069,6 +3122,7 @@ ul.topnav em:hover {
 
 
 
+
 /* category product */
 
 .producttabs {
@@ -3263,6 +3317,7 @@ ul.topnav em:hover {
 
 
 
+
 /* products page */
 
 .col-item {
@@ -3341,6 +3396,7 @@ ul.topnav em:hover {
     overflow: hidden;
     opacity: 0.9;
 }
+
 
 
 
@@ -3435,6 +3491,7 @@ ul.topnav em:hover {
 
 
 
+
 /*----------- 11. Price ----------- */
 
 .price {
@@ -3448,6 +3505,7 @@ ul.topnav em:hover {
     min-height: 20px;
     font-weight: 300;
 }
+
 
 
 
@@ -3493,6 +3551,7 @@ ul.topnav em:hover {
 
 
 
+
 /* Old price */
 
 .old-price .price-label {
@@ -3511,6 +3570,7 @@ ul.topnav em:hover {
     display: none;
     padding: 0 5px;
 }
+
 
 
 
@@ -3536,6 +3596,7 @@ ul.topnav em:hover {
 .latest-product .old-price .price-label {
     display: none;
 }
+
 
 
 
@@ -3578,6 +3639,7 @@ ul.topnav em:hover {
 
 
 
+
 /* Minimal price (as low as) */
 
 .minimal-price {
@@ -3593,6 +3655,7 @@ ul.topnav em:hover {
 }
 
 .minimal-price-link .label {}
+
 
 
 
@@ -3634,6 +3697,7 @@ ul.topnav em:hover {
 
 
 
+
 /* Minimal price (as low as) */
 
 .minimal-price {
@@ -3659,6 +3723,7 @@ ul.topnav em:hover {
     color: #333;
     font-size: 13px;
 }
+
 
 
 
@@ -3778,6 +3843,7 @@ small {
 .recommend .controls .prev {
     right: 36px;
 }
+
 
 
 
@@ -3913,6 +3979,7 @@ small {
 
 
 
+
 /*--------- 14. To Top ------------ */
 
 #toTop:active,
@@ -3947,6 +4014,7 @@ small {
 #toTop:hover {
     background-color: #a7cf47;
 }
+
 
 
 
@@ -4061,6 +4129,7 @@ small {
 
 
 
+
 /*--------- 16. Breadcrums ----------*/
 
 .breadcrumbs {
@@ -4093,6 +4162,7 @@ small {
     font-size: 13px;
     margin: 0 5px;
 }
+
 
 
 
@@ -4184,6 +4254,7 @@ small {
 .side-nav-categories {
     color: #fff;
 }
+
 
 
 
@@ -4332,6 +4403,7 @@ small {
     color: #fff;
     /*color:#5CD2C8;*/
 }
+
 
 
 
@@ -4525,6 +4597,7 @@ ul#magicat li .open-close,
 
 
 
+
 /* Sidebar, Block, Data Table */
 
 .sidebar {
@@ -4600,14 +4673,12 @@ ul#magicat li .open-close,
     margin: 0;
 }
 
+
 /*.block .block-content .price {
     font-size: 14px;
     font-weight: normal;
     color: #666;
 }*/
-
-
-
 
 
 /* Block: Account */
@@ -4659,6 +4730,7 @@ ul#magicat li .open-close,
 
 
 
+
 /* Block: Currency Switcher */
 
 .block-currency {}
@@ -4667,6 +4739,7 @@ ul#magicat li .open-close,
     width: 100%;
     margin-right: 8px;
 }
+
 
 
 
@@ -4714,6 +4787,7 @@ ul#magicat li .open-close,
     color: inherit;
     font-size: 13px;
 }
+
 
 
 
@@ -4946,9 +5020,11 @@ ul#magicat li .open-close,
 
 
 
+
 /* Block: Wishlist */
 
 .block-wishlist {}
+
 
 
 
@@ -5068,6 +5144,7 @@ ul#magicat li .open-close,
 
 
 
+
 /* Block: Compare Products */
 
 .block-compare {
@@ -5133,6 +5210,7 @@ ol#compare-items li.last {
     border-bottom: none;
     margin-bottom: 0;
 }
+
 
 
 
@@ -5229,6 +5307,7 @@ ol#compare-items li.last {
 
 
 
+
 /* Block: Recently Compared */
 
 .block-compared .block-content {
@@ -5303,6 +5382,7 @@ ol#compare-items li.last {
 
 
 
+
 /* Block: Poll */
 
 .block-poll {
@@ -5362,6 +5442,7 @@ ol#compare-items li.last {
 
 
 
+
 /* Block: Tags */
 
 .block-tags {
@@ -5393,6 +5474,7 @@ ol#compare-items li.last {
 
 
 
+
 /* Block: Subscribe */
 
 .block-subscribe {
@@ -5413,6 +5495,7 @@ ol#compare-items li.last {
     margin-bottom: 5px;
     color: #222;
 }
+
 
 
 
@@ -5480,6 +5563,7 @@ ol#compare-items li.last {
 
 
 
+
 /* Block: Reorder */
 
 .block-reorder {}
@@ -5496,6 +5580,7 @@ ol#compare-items li.last {
 .block-reorder .product-name {
     margin-left: 20px;
 }
+
 
 
 
@@ -5543,6 +5628,7 @@ ol#compare-items li.last {
 
 
 
+
 /* Block: Price */
 
 .block-price {
@@ -5553,6 +5639,7 @@ ol#compare-items li.last {
 .block-price .block-content {
     margin: 15px 0
 }
+
 
 
 
@@ -5594,6 +5681,7 @@ ol#compare-items li.last {
     text-transform: uppercase;
     margin: auto;
 }
+
 
 
 
@@ -5734,6 +5822,7 @@ ol#compare-items li.last {
 
 
 
+
 /* Pager */
 
 .pager {
@@ -5802,6 +5891,7 @@ ol#compare-items li.last {
 
 
 
+
 /* Sorter */
 
 .sorter {
@@ -5824,6 +5914,7 @@ ol#compare-items li.last {
     float: left;
     margin-top: 6px;
 }
+
 
 
 
@@ -6070,6 +6161,7 @@ ol#compare-items li.last {
 
 
 
+
 /* Category Toolbar, Pager */
 
 .toolbar .button-list {
@@ -6203,6 +6295,7 @@ ol#compare-items li.last {
 
 
 
+
 /*----------- 19. View Type: Grid ---------- */
 
 .products-grid,
@@ -6249,6 +6342,7 @@ a.link-compare {
     opacity: 0.9;
     z-index: 10000;
 }
+
 
 
 
@@ -6477,6 +6571,7 @@ li .list {
 
 
 
+
 /*----------- 21. Product Details -----------*/
 
 .product-view .product-img-box {
@@ -6492,6 +6587,7 @@ li .list {
 .product-view .product-img-box .product-image .large-image {
     border: 1px #ddd solid;
 }
+
 
 
 
@@ -6536,6 +6632,7 @@ li .list {
 
 
 
+
 /* More Views SLIDER */
 
 .more-views {
@@ -6572,6 +6669,7 @@ li .list {
     top: 50%;
     background: none;
 }
+
 
 
 
@@ -6932,6 +7030,7 @@ li .list {
 
 
 
+
 /* add to cart */
 
 .product-view .product-shop .add-to-box .add-to-cart label {
@@ -7098,6 +7197,7 @@ li .list {
 .slider-controls {
     -webkit-transform: translate3d(0, 0, 0)
 }
+
 
 
 
@@ -7313,6 +7413,7 @@ li .list {
 
 
 
+
 /*detail page view link */
 
 a.button.view-all:before {
@@ -7457,6 +7558,7 @@ a.button.view-all {
 .mini-products-list .price-box .price {
     margin-right: 10px;
 }
+
 
 
 
@@ -7845,6 +7947,7 @@ textarea {
 
 
 
+
 /* Product Options */
 
 .product-options {
@@ -7969,6 +8072,7 @@ textarea {
 
 
 
+
 /* Grouped Product */
 
 .product-view .grouped-items-table {
@@ -7976,6 +8080,7 @@ textarea {
     margin-top: 50px;
     border-bottom: none;
 }
+
 
 
 
@@ -7989,9 +8094,11 @@ textarea {
 
 
 
+
 /* Block: Additional */
 
 .product-view .box-additional {}
+
 
 
 
@@ -8006,6 +8113,7 @@ textarea {
 .product-view .box-up-sell .products-grid td {
     width: 25%;
 }
+
 
 
 
@@ -8040,6 +8148,7 @@ textarea {
 
 
 
+
 /* Block: Reviews */
 
 .product-view .box-reviews {}
@@ -8050,9 +8159,11 @@ textarea {
 
 
 
+
 /* Send a Friend */
 
 .send-friend {}
+
 
 
 
@@ -8123,6 +8234,7 @@ textarea {
 }
 
 .availability-only-details tr.odd td.last {}
+
 
 
 
@@ -8246,6 +8358,7 @@ textarea {
 
 
 
+
 /*  Add to Links + Add to Cart */
 
 .add-to-box {
@@ -8299,6 +8412,7 @@ textarea {
     margin-left: 5px;
     text-transform: uppercase;
 }
+
 
 
 
@@ -8397,6 +8511,7 @@ textarea {
 
 
 
+
 /* Data Table */
 
 .data-table {
@@ -8443,6 +8558,7 @@ data-table textarea {
 .data-table .description {
     margin: 10px 0;
 }
+
 
 
 
@@ -8724,6 +8840,7 @@ form-list label.required em {
 
 
 
+
 /* ---------- 23. Dashboard ---------- */
 
 .dashboard {}
@@ -8771,6 +8888,7 @@ form-list label.required em {
 
 
 
+
 /* Content Columns */
 
 .col2-set .col-1 {
@@ -8801,6 +8919,7 @@ form-list label.required em {
     margin-bottom: 5px;
     text-transform: uppercase;
 }
+
 
 
 
@@ -9127,6 +9246,7 @@ button.button.btn-proceed-checkout span {
 
 
 
+
 /* --------- 25. Wishlist Table ----------- */
 
 #wishlist-table .product-name {
@@ -9266,6 +9386,7 @@ button.button.btn-proceed-checkout span {
 
 
 
+
 /*---------- 26. Progress Bar ------- */
 
 .state_bar {
@@ -9302,6 +9423,7 @@ button.button.btn-proceed-checkout span {
     border: 1px solid #c0ecec;
     color: #333;
 }
+
 
 
 
@@ -9437,6 +9559,7 @@ button.button.btn-proceed-checkout span {
 
 
 
+
 /*--------- 28. Account Login page ---------*/
 
 .account-login {
@@ -9519,6 +9642,7 @@ button.button.btn-proceed-checkout span {
 
 
 
+
 /*---------- 29. 404 Page ---------- */
 
 .content-wrapper {
@@ -9587,6 +9711,7 @@ button.button.btn-proceed-checkout span {
     line-height: 16px;
     text-decoration: none;
 }
+
 
 
 
@@ -9664,6 +9789,7 @@ ul.contact-info li.last {
 
 
 
+
 /* Brand Logo */
 
 .brand-logo {
@@ -9719,6 +9845,7 @@ ul.contact-info li.last {
 
 
 
+
 /* newsletter */
 
 .newsletter {
@@ -9769,6 +9896,7 @@ button.subscribe:before {
     display: inline-block;
     margin-right: 5px;
 }
+
 
 
 
@@ -10177,6 +10305,7 @@ button.subscribe:before {
 
 
 
+
 /* 31. our-features-box */
 
 .our-features-box {
@@ -10277,6 +10406,7 @@ button.subscribe:before {
     height: 100px;
     line-height: 100px!important
 }
+
 
 
 
@@ -10514,6 +10644,7 @@ a.link-compare:hover {
 
 
 
+
 /*------- 33. Global Styles ----- */
 
 
@@ -10523,6 +10654,7 @@ p.control input.checkbox,
 p.control input.radio {
     margin-right: 6px;
 }
+
 
 
 
@@ -10763,6 +10895,7 @@ input.radio {
 
 
 
+
 /* All Buttons Icons */
 
 .returns:before {
@@ -10992,6 +11125,7 @@ button.button span {
 
 
 
+
 /* Delivery */
 
 .img-responsive,
@@ -11047,6 +11181,7 @@ button.button span {
     color: #ee3b27;
     float: left;
 }
+
 
 
 
@@ -11110,6 +11245,7 @@ button.button span {
 
 
 
+
 /* compare */
 
 .compare-table .product-shop-row td {
@@ -11143,6 +11279,7 @@ button.button span {
 a.btn-cart {
     color: #333;
 }
+
 
 
 
@@ -11278,6 +11415,7 @@ h4.trigger {
 
 
 
+
 /* Sitemap */
 
 .cart .page-title {
@@ -11332,6 +11470,7 @@ h3.product-name a:hover {
     text-decoration: none;
     color: #A7CF47;
 }
+
 
 
 
@@ -13411,4 +13550,15 @@ h3.product-name a:hover {
     .product-additional img {
         width: 100%;
     }
+}
+
+.has-error .form-control {
+    border-color: #dc3545;
+}
+
+.has-error .help-block {
+    display: none;
+    margin-top: .25rem;
+    font-size: .875rem;
+    color: #dc3545;
 }
