Single page product changes

--- a/css/fancybox.css
+++ b/css/fancybox.css
@@ -783,8 +783,8 @@ div#fancybox-overlay {
 #fancybox-content .product-essential .product-image img {
 	
 }
-.product-shop.col-sm-6.col-xs-12 {
-	margin-left:7px !important;}
+/*.product-shop.col-sm-6.col-xs-12 {
+	margin-left:7px !important;}*/
 #fancybox-content .more-views .jcarousel-prev {
 	left: 0px;
 }
