--- a/css/style.css
+++ b/css/style.css
@@ -3259,14 +3259,14 @@ ul.topnav em:hover {
 .products-grid .item .item-inner .item-info .info-inner .item-title a {
     text-decoration: none;
     text-transform: uppercase;
-    font-family: "Lato", sans-serif;
+    /*font-family: "Lato", sans-serif;
     font-size: 14px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: block;
-    margin-bottom: 3px;
-    padding-top: 10px;
+    display: block;*/
+    /*margin-bottom: 3px;
+    padding-top: 10px;*/
 }
 
 .products-grid .item .item-inner .item-info .info-inner .item-title a:hover {
@@ -10494,9 +10494,9 @@ a.link-compare:hover {
     margin-bottom: 5px;
     /*padding-top: 16px;*/
     font-size: 12px;
-    white-space: nowrap;
+    /*white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow: ellipsis;*/
 }
 
 .col-item .item-title a {
